@@ -1,5 +1,11 @@
 2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Bug 1892419:
+    * source/org/jfree/chart/axis/LogAxis.java
+    (LogAxis(String)): Change default number of minor ticks.
+
+2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>
+
     Patch 1874890 (Ulrich Voigt with contributions from Martin Hoeller):
     * source/org/jfree/chart/renderer/xy/XYStepRenderer.java
     (stepPoint): New field,
